--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Dwayne",
   "license": "ISC",
   "devDependencies": {
+    "@svgr/webpack": "^3.1.0",
     "@types/markdown-it": "^0.0.9",
     "@types/node": "^14.0.13",
     "@types/nodemailer": "^6.4.0",
@@ -19,8 +20,7 @@
     "@types/superagent": "^4.1.7",
     "concat": "^1.0.3",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^7.1.1",
-    "@svgr/webpack": "^3.1.0"
+    "postcss-cli": "^7.1.1"
   },
   "dependencies": {
     "date-fns": "^2.22.1",
@@ -34,6 +34,7 @@
     "nodemailer": "^6.4.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sass": "^1.35.1",
     "superagent": "^5.2.2",
     "typescript": "^4.3.4"
   },
