--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "ts-jest": "^27.0.3"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "date-fns": "^2.22.1",
     "gray-matter": "^4.0.2",
     "markdown-it": "^11.0.0",
