--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^17.0.2",
     "sass": "^1.35.1",
     "superagent": "^5.2.2",
+    "swr": "^0.5.6",
     "typescript": "^4.3.4"
   },
   "browserslist": [
