--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "next dev",
     "test": "jest",
-    "build": "tsc -p utils/tsconfig.json && next build",
-    "start": "next start",
+    "build": "next build",
+    "start": "next start -p 3002",
     "clean": "rm -rf node_modules"
   },
   "author": "Daryl Cecile",
